--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: AKIA4ASLMUJL4KHQTLF3
-          aws-secret-access-key: gTMIoKP8hUn8B7drgt4j3LXIv4UGg7kKgGhJ2W8O
+          aws-access-key-id: {Put your AWS Access Key here}
+          aws-secret-access-key: {Put your AWS Secret Access Key here}
           aws-region: us-east-1
       - name: Login to Amazon ECR
         id: login-ecr
