--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: AKIA4ASLMUJL3B5VD4IT
-          aws-secret-access-key: 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
+          aws-access-key-id: 
+          aws-secret-access-key:
           aws-region: us-east-1
       - name: Login to Amazon ECR
         id: login-ecr
